mutants.out/log/crates__script__src__lib.rs_line_288_col_9.log

*** crates/script/src/lib.rs:288:9: replace CompiledScript::workspace_path -> &Path with Box::leak(Box::new(Default::default()))

*** mutation diff:
--- crates/script/src/lib.rs
+++ replace CompiledScript::workspace_path -> &Path with Box::leak(Box::new(Default::default()))
@@ -280,17 +280,17 @@
 }
 
 impl CompiledScript {
     pub fn binary_path(&self) -> &Path {
         &self.binary_path
     }
 
     pub fn workspace_path(&self) -> &Path {
-        self.workspace.path()
+        Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn input_json(&self) -> &str {
         &self.input_json
     }
 }
 
 #[derive(Debug)]


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=script@0.1.0
       Dirty script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/crates/script): couldn't read metadata for file `target/debug/deps/libscript-d02cc1a249e66324.rlib`
   Compiling script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/crates/script)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps`
error[E0277]: the trait bound `Path: Default` is not satisfied
   --> crates/script/src/lib.rs:288:28
    |
288 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Path`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
    --> crates/script/src/lib.rs:288:28
     |
 288 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     |                   -------- ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
     |                   |
     |                   required by a bound introduced by this call
     |
     = help: within `Path`, the trait `Sized` is not implemented for `[u8]`
note: required because it appears within the type `Path`
    --> /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/std/src/path.rs:2180:12
     |
2180 | pub struct Path {
     |            ^^^^
note: required by a bound in `Box::<T>::new`
    --> /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/alloc/src/boxed.rs:244:6
     |
 244 | impl<T> Box<T> {
     |      ^ required by this bound in `Box::<T>::new`
...
 260 |     pub fn new(x: T) -> Self {
     |            --- required by a bound in this associated function

For more information about this error, try `rustc --explain E0277`.
error: could not compile `script` (lib) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `script` (lib test) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
